# network-scanner

./: .gitignore  README.md  pyproject.toml
netscan/: __init__.py  cli.py  report.py  scanner.py  storage.py
tests/: test_scanner.py
