[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "network-scanner"
version = "0.1.0"
description = "Scanner de rede inteligente: descoberta de hosts, portas, SO e relatório HTML."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Diogo Damasceno", email = "dev.diogodamasceno@gmail.com" }]
keywords = ["security", "network", "scanner", "nmap", "cybersecurity"]
dependencies = ["rich>=13"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
netscan = "netscan.cli:main"

[tool.setuptools.packages.find]
include = ["netscan*"]
